Gene expression LP code updated and fixed

--- a/gene_expression.ipynb
+++ b/gene_expression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,6 +1793,499 @@
     "ax.plot(ubs_adj)\n",
     "ax.fill_between([x for x in range(13)],lbs_adj, ubs_adj)\n",
     "ax.axhline(0.5, color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full implementation, Optimized\n",
+    "\n",
+    "Using new optimized bootstrap code (and slightly optimised parameter use in LP's) and the addition of missing distributional assumptions, as well as frechet bounds put everything together:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import gurobipy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sample path simulation\n",
+    "\n",
+    "NOTE: test and implement single path, thinned sampler for better efficiency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_path_gene(initial_state, params, tmax, plot=False):\n",
+    "    \"\"\"\n",
+    "    Simulate a sample path of gene expression\n",
+    "    start at initial state, run until time tmax, rates in params\n",
+    "    return visited states and jump times\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # initialise time and state (also store jump times)\n",
+    "    t = 0\n",
+    "    path = [(initial_state[0],initial_state[1])]\n",
+    "    jump_times = [0]\n",
+    "    k_on, k_off, k_tx, k_deg = params[0], params[1], params[2], params[3]\n",
+    "\n",
+    "    # simulate until stopping time\n",
+    "    while t < tmax:\n",
+    "        # simulate holding time of current state (m,g)\n",
+    "        m, g = path[-1][0], path[-1][1]\n",
+    "\n",
+    "        # define rates\n",
+    "        # q(x,x+(0,1)): gene turns on if off\n",
+    "        q_on = (1 - g) * k_on\n",
+    "        # q(x,x+(0,-1)): gene turns off if on\n",
+    "        q_off = g * k_off\n",
+    "        # q(x,x+(1,0)): transcription if gene on\n",
+    "        q_tx = g * k_tx\n",
+    "        # q(x,x+(-1,0)): degradation if  there are molecules\n",
+    "        q_deg = m * k_deg\n",
+    "        # -q(x,x): holding rate = sum q(x,y) over y\n",
+    "        q_hold = q_on + q_off + q_tx + q_deg\n",
+    "\n",
+    "        # exponential holding time of state\n",
+    "        t_hold = -math.log(random.random()) / q_hold\n",
+    "        t += t_hold\n",
+    "        jump_times.append(t)\n",
+    "\n",
+    "        # jump probability\n",
+    "        # P(x -> y) = q_xy / q_hold\n",
+    "        outcome = [1,2,3,4]\n",
+    "        prob = [q_on / q_hold, q_off / q_hold, q_tx / q_hold, q_deg / q_hold]\n",
+    "        jump = np.random.choice(outcome,p=prob)\n",
+    "        # jump to new state\n",
+    "        if jump == 1:\n",
+    "            path.append((m,g + 1))\n",
+    "        elif jump == 2:\n",
+    "            path.append((m,g - 1))\n",
+    "        elif jump == 3:\n",
+    "            path.append((m + 1,g))\n",
+    "        elif jump == 4:\n",
+    "            path.append((m - 1,g))\n",
+    "\n",
+    "    if plot:\n",
+    "        # separate paths\n",
+    "        m_path = [state[0] for state in path]\n",
+    "        g_path = [state[1] for state in path]\n",
+    "        plt.scatter(jump_times, m_path, c=g_path, ec='k')\n",
+    "\n",
+    "        # defined colour plotting\n",
+    "        #cmap, norm = mcolors.from_levels_and_colors([0, 1, 2], ['orange','blue'])\n",
+    "        #plt.scatter(jump_times, m_list, c=g_list, cmap=cmap, norm=norm)\n",
+    "\n",
+    "    return path, jump_times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimized bootstrap code\n",
+    "\n",
+    "Significant speedup by vectorising, but slowed by inefficient simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap_marginal(m_list, initial_state, params, tmax, n, N, plot=False, printing=False):\n",
+    "    \"\"\"\n",
+    "    m_list: marginal states of m to calculate probabilities for\n",
+    "    initial state\n",
+    "    parameters\n",
+    "    tmax: time of path before sample\n",
+    "    n = number of simulated samples\n",
+    "    N = number of bootstrap samples\n",
+    "    \"\"\"\n",
+    "\n",
+    "    s1 = time.time()\n",
+    "    # simulate n samples: (m,g)\n",
+    "    states = []\n",
+    "    for i in range(n):\n",
+    "        path, jumps = sample_path_gene(initial_state, params, tmax, plot=plot)\n",
+    "        states.append(path[-2]) # last state before tmax\n",
+    "    plt.show()\n",
+    "    e1 = time.time()\n",
+    "    print(f\"Simulation time: {e1 - s1}\")\n",
+    "\n",
+    "    s2 = time.time()\n",
+    "    # simulate N bootstrap samples: estimates p(m) for each, and for each m\n",
+    "    estimates = [[] for x in m_list]\n",
+    "    for i in range(N):\n",
+    "        # sample with replacement from (m,g) samples\n",
+    "        sample = random.choices(states,k = n)\n",
+    "        # take just marginal m information\n",
+    "        m_sample = [state[0] for state in sample]\n",
+    "        # estimate p(m) from marginal info\n",
+    "        for i, x in enumerate(m_list):\n",
+    "            estimates[i].append(m_sample.count(x) / n)\n",
+    "\n",
+    "    # create confidence intervals (95%) via 2.5%, 97.5% quantiles for each x\n",
+    "    intervals = [np.quantile(est,[0.025,0.975]) for est in estimates]\n",
+    "    e2 = time.time()\n",
+    "    print(f\"Computation time: {e2 - s2}\")\n",
+    "\n",
+    "    # plot histograms and CI\n",
+    "    for i, x in enumerate(m_list):\n",
+    "        if printing:\n",
+    "            print(f\"95% CI for p({x}) is: ({intervals[i][0]}, {intervals[i][1]})\")\n",
+    "        if plot:\n",
+    "            plt.hist(estimates[i])\n",
+    "            plt.title(f\"Hist of p({x})\")\n",
+    "            plt.axvline(intervals[i][0], color=\"red\")\n",
+    "            plt.axvline(intervals[i][1], color=\"red\")\n",
+    "            plt.show()\n",
+    "\n",
+    "    # return CIs\n",
+    "    return estimates, intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap_marginal_optim(initial_state, params, n, N, tmax=100, plot=False, printing=False):\n",
+    "    \"\"\"\n",
+    "    Simulate sample paths of reaction system, bootstrap to produce confidence\n",
+    "    intervals on the m marginals of the stationary distributin.\n",
+    "\n",
+    "    Arguments:\n",
+    "    initial_state: start of each simulated sample path (m, g)\n",
+    "    params: parameters of chain for simulation [k_on, k_off, k_tx, k_deg]\n",
+    "    n: number of simulated sample paths\n",
+    "    N: number of bootstrap samples\n",
+    "    tmax: time of each sample path\n",
+    "    plot: plot the computed bounds\n",
+    "    print: print the computed bounds\n",
+    "\n",
+    "    Returns:\n",
+    "    intervals: list of confidence intervals for m marginals p(0), ..., p(M - 1)\n",
+    "        of the stationary distribution of the chain\n",
+    "    \"\"\"\n",
+    "\n",
+    "    s1 = time.time()\n",
+    "    # simulate n stationary samples: (m,g) (joint state not just marginal)\n",
+    "    states = []\n",
+    "    for i in range(n):\n",
+    "        path, jumps = sample_path_gene(initial_state, params, tmax)\n",
+    "        # last state before tmax\n",
+    "        states.append(path[-2])\n",
+    "    e1 = time.time()\n",
+    "    print(f\"Simulation time: {e1 - s1}\")\n",
+    "\n",
+    "    s2 = time.time()\n",
+    "    # take the m marginal states\n",
+    "    m_sample = [state[0] for state in states]\n",
+    "\n",
+    "    # find the largest state (+ 1)\n",
+    "    M = np.max(m_sample) + 1\n",
+    "\n",
+    "    # N boostrap samples as N x n array\n",
+    "    bootstrap = np.random.choice(m_sample, size=(N, n))\n",
+    "    # produce N x M array of counts of states:\n",
+    "    # offset each row by multiple of M for efficient bincount\n",
+    "    bootstrap_offs = bootstrap + np.arange(N)[:,None]*M\n",
+    "    counts = np.bincount(bootstrap_offs.ravel(), minlength=N * M).reshape(-1, M)\n",
+    "    # dividing by n gives columns of estimates\n",
+    "    # take 2.5%, 97.5% percentiles of each column (i.e each p(x))\n",
+    "    quantiles = np.quantile(counts / n, [0.025, 0.975], axis=0)\n",
+    "    # form intervals: list of [2.5%, 97.5%] values for each p(x)\n",
+    "    intervals = [quantiles[:,i] for i in range(M)]\n",
+    "    e2 = time.time()\n",
+    "    print(f\"Computation time: {e2 - s2}\")\n",
+    "\n",
+    "    # plot histograms and CI\n",
+    "    for x in range(M):\n",
+    "        if printing:\n",
+    "            print(f\"95% CI for m marginal p({x}) is: ({intervals[x][0]}, {intervals[x][1]})\")\n",
+    "        if plot:\n",
+    "            plt.hist(counts[:, x] / n)\n",
+    "            plt.title(f\"Hist of m marginal p({x})\")\n",
+    "            plt.axvline(intervals[x][0], color=\"red\")\n",
+    "            plt.axvline(intervals[x][1], color=\"red\")\n",
+    "            plt.show()\n",
+    "\n",
+    "    # return CIs\n",
+    "    return intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation time: 42.442232608795166\n",
+      "Computation time: 7.189393520355225\n",
+      "95% CI for p(0) is: (0.2788, 0.3042)\n",
+      "95% CI for p(1) is: (0.3154, 0.3414)\n",
+      "95% CI for p(2) is: (0.2008, 0.2236)\n",
+      "95% CI for p(3) is: (0.0958, 0.113)\n",
+      "95% CI for p(4) is: (0.0362, 0.0472)\n",
+      "95% CI for p(5) is: (0.0132, 0.0202)\n",
+      "95% CI for p(6) is: (0.0026, 0.0064)\n",
+      "95% CI for p(7) is: (0.0002, 0.002)\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimates, intervals = bootstrap_marginal([m for m in range(8)], (0, 0), [2, 1, 2, 1], 100, 5000, 5000, plot=False, printing=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation time: 44.08175277709961\n",
+      "Computation time: 0.9637124538421631\n",
+      "95% CI for m marginal p(0) is: (0.2816, 0.3068)\n",
+      "95% CI for m marginal p(1) is: (0.3196, 0.3462)\n",
+      "95% CI for m marginal p(2) is: (0.2008, 0.2232)\n",
+      "95% CI for m marginal p(3) is: (0.098795, 0.1154)\n",
+      "95% CI for m marginal p(4) is: (0.0292, 0.0392)\n",
+      "95% CI for m marginal p(5) is: (0.0102, 0.0164)\n",
+      "95% CI for m marginal p(6) is: (0.0036, 0.0078)\n",
+      "95% CI for m marginal p(7) is: (0.0, 0.001)\n",
+      "95% CI for m marginal p(8) is: (0.0, 0.001)\n"
+     ]
+    }
+   ],
+   "source": [
+    "intervals_optim = bootstrap_marginal_optim((0, 0), [2, 1, 2, 1], 5000, 5000, tmax=100, plot=False, printing=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LP code\n",
+    "\n",
+    "Add options for different sets of constraints, add missing distributional constraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gene_expression_LP_optim(params, N, intervals):\n",
+    "    \"\"\"\n",
+    "    Solve gene expression LP to bound parameters\n",
+    "\n",
+    "    Inputs:\n",
+    "    params: [k_on, k_off, k_tx, k_deg] either values that will be fixed, or \"v\"\n",
+    "        for variable to be bounded\n",
+    "    N: number of rows/equations of Qp = 0 to use in constraints\n",
+    "        must be even\n",
+    "    intervals: list of confidence intervals for at least N/2 + 1 marginal states\n",
+    "    \"\"\"\n",
+    "\t\n",
+    "\t# number of marginals used\n",
+    "    M = int(N/2 + 1)\n",
+    "\n",
+    "\t# create Qr matrices:\n",
+    "\t# create N + 2 x N + 2 square and drop last 2 rows, as have 2 upper diagonals\n",
+    "    Q_on = (np.diag([-1 if not x % 2 else 0 for x in range(0,N+2)],0) +\n",
+    "    \t\tnp.diag([1 if not x % 2 else 0 for x in range(0,N+1)],-1))[:-2, :]\n",
+    "    Q_off = (np.diag([-1 if x % 2 else 0 for x in range(0,N+2)],0) +\n",
+    "    \t\tnp.diag([1 if not x % 2 else 0 for x in range(0,N+1)],1))[:-2, :]\n",
+    "    Q_tx = (np.diag([-1 if x % 2 else 0 for x in range(0,N+2)],0) +\n",
+    "    \t\tnp.diag([1 if x % 2 else 0 for x in range(0,N)],-2))[:-2, :]\n",
+    "    Q_deg = (np.diag([-1 if x > 1 else 0 for x in range(0,N+2)],0) +\n",
+    "    \t\tnp.diag([1 for x in range(0,N)],2))[:-2, :]\n",
+    "\n",
+    "    # bounds from CI, on marginal\n",
+    "    pl = [intr[0] for intr in intervals]\n",
+    "    pu = [intr[1] for intr in intervals]\n",
+    "\n",
+    "    # define bounds\n",
+    "    pl = np.array(pl)[:M]\n",
+    "    pu = np.array(pu)[:M]\n",
+    "\n",
+    "    # form doubled bounds\n",
+    "    pdl = np.repeat(pl,2)\n",
+    "    pdu = np.repeat(pu,2)\n",
+    "\n",
+    "    # NOTE: need different cutoff: n p's <=> n/2 marginals\n",
+    "\t\n",
+    "    # marginal = A @ p\n",
+    "    A = np.repeat(np.eye(M, dtype=int), repeats=2, axis=1)\n",
+    "\n",
+    "\t# Construct the problem.\n",
+    "    # Variables\n",
+    "    k1, k2, k3, k4 = params[0], params[1], params[2], params[3]\n",
+    "    if k1 == \"v\":\n",
+    "        k_on = cv.Variable()\n",
+    "    else:\n",
+    "        k_on = k1\n",
+    "    if k2 == \"v\":\n",
+    "        k_off = cv.Variable()\n",
+    "    else:\n",
+    "        k_off = k2\n",
+    "    if k3 == \"v\":\n",
+    "        k_tx = cv.Variable()\n",
+    "    else:\n",
+    "        k_tx = k3\n",
+    "    if k4 == \"v\":\n",
+    "        k_deg = cv.Variable()\n",
+    "    else:\n",
+    "        k_deg = k4\n",
+    "    z_on = cv.Variable(N + 2)\n",
+    "    z_off = cv.Variable(N + 2)\n",
+    "    z_tx = cv.Variable(N + 2)\n",
+    "    z_deg = cv.Variable(N + 2)\n",
+    "\n",
+    "    # frechet bound vector\n",
+    "    kv1 = np.array([0 if x % 2 else 1 for x in range(N + 2)])\n",
+    "    kv2 = np.array([1 if x % 2 else 0 for x in range(N + 2)])\n",
+    "    kv = k_on * kv1 + k_off + kv2\n",
+    "    #kv = np.array([k_off if x % 2 else k_on for x in range(N + 2)])\n",
+    "\n",
+    "\t# Objective\n",
+    "    var = \"k_tx\"\n",
+    "    objective_max = cv.Maximize(k_tx)\n",
+    "    objective_min = cv.Minimize(k_tx)\n",
+    "\n",
+    "\t# Constraints\n",
+    "    constraints = [\n",
+    "        # Qp = 0\n",
+    "        Q_on @ z_on + Q_off @ z_off + Q_tx @ z_tx + Q_deg @ z_deg == 0,\n",
+    "        # k_r * p_L <= A @ z_r <= k_r * p_U\n",
+    "        k_on * pl <= A @ z_on, A @ z_on <= k_on * pu,\n",
+    "\t\tk_off * pl <= A @ z_off, A @ z_off <= k_off * pu,\n",
+    "\t\tk_tx * pl <= A @ z_tx, A @ z_tx <= k_tx * pu,\n",
+    "\t\tk_deg * pl <= A @ z_deg, A @ z_deg <= k_deg * pu,\n",
+    "        # 0 <= z_r <= k_r , k_r >= 0\n",
+    "        0 <= z_on, z_on <= k_on, k_on >= 0,\n",
+    "        0 <= z_off, z_off <= k_off, k_off >= 0,\n",
+    "        0 <= z_tx, z_tx <= k_tx, k_tx >= 0,\n",
+    "        0 <= z_deg, z_deg <= k_deg, k_deg >= 0,\n",
+    "        # sum( z_r entries ) <= k_r\n",
+    "        sum([z_on[x] for x in range(N + 2)]) <= k_on,\n",
+    "        sum([z_off[x] for x in range(N + 2)]) <= k_off,\n",
+    "        sum([z_tx[x] for x in range(N + 2)]) <= k_tx,\n",
+    "        sum([z_deg[x] for x in range(N + 2)]) <= k_deg,\n",
+    "        # joint upper bounds: z_r <= k_r * p_DU\n",
+    "    \tz_on <= k_on * pdu, z_off <= k_off * pdu, z_tx <= k_tx * pdu, z_deg <= k_deg * pdu,\n",
+    "        # frechet lower bounds (individuals may be redundant)\n",
+    "        z_on >= k_on * pdl + k_off * pdl - kv - k_off * pdu,\n",
+    "        z_off >= k_on * pdl + k_off * pdl - kv - k_on * pdu,\n",
+    "        z_on + z_off >= k_on * pdl + k_off * pdl - kv\n",
+    "\t\t]\n",
+    "\n",
+    "\t# define\n",
+    "    prob_max = cv.Problem(objective_max, constraints)\n",
+    "    prob_min = cv.Problem(objective_min, constraints)   \n",
+    "\n",
+    "\t# Print results\n",
+    "    result_max = prob_max.solve()\n",
+    "    print(f\"Upper bound status: {prob_max.status}\")\n",
+    "    print(f\"\\nUpper bound on {var}: {prob_max.value}\")\n",
+    "    print(f\"\\nz_on: {z_on.value}\")\n",
+    "    print(f\"z_off: {z_off.value}\")\n",
+    "    print(f\"z_tx: {z_tx.value}\")\n",
+    "    print(f\"z_deg: {z_deg.value}\")\n",
+    "\n",
+    "    result_min = prob_min.solve()\n",
+    "    print(f\"\\nLower bound status: {prob_min.status}\")\n",
+    "    print(f\"\\nLower bound on {var}: {prob_min.value}\")\n",
+    "    print(f\"\\nz_on: {z_on.value}\")\n",
+    "    print(f\"z_off: {z_off.value}\")\n",
+    "    print(f\"z_tx: {z_tx.value}\")\n",
+    "    print(f\"z_deg: {z_deg.value}\")\n",
+    "\n",
+    "    return prob_max.value, prob_min.value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simulation time: 4.732981443405151\n",
+      "Computation time: 0.02263355255126953\n",
+      "95% CI for m marginal p(0) is: (0.6, 0.660025)\n",
+      "95% CI for m marginal p(1) is: (0.232, 0.286025)\n",
+      "95% CI for m marginal p(2) is: (0.066, 0.10002499999999999)\n",
+      "95% CI for m marginal p(3) is: (0.012975, 0.031)\n",
+      "95% CI for m marginal p(4) is: (0.002, 0.013)\n"
+     ]
+    }
+   ],
+   "source": [
+    "intervals_optim = bootstrap_marginal_optim(initial_state=(0, 0), params=[1, 1, 1, 1], n=1000, N=1000, tmax=100, plot=False, printing=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upper bound status: unbounded\n",
+      "\n",
+      "Upper bound on k_tx: inf\n",
+      "\n",
+      "z_on: None\n",
+      "z_off: None\n",
+      "z_tx: None\n",
+      "z_deg: None\n",
+      "\n",
+      "Lower bound status: optimal\n",
+      "\n",
+      "Lower bound on k_tx: 0.3515018370411523\n",
+      "\n",
+      "z_on: [0.20861194 0.20994552 0.04864012 0.11892634 0.01413918 0.03888522\n",
+      " 0.00473848 0.00989295 0.0033302  0.00291222]\n",
+      "z_off: [0.15923805 0.1507201  0.03974406 0.08530808 0.01244447 0.02841844\n",
+      " 0.0043352  0.0078276  0.00239667 0.00218957]\n",
+      "z_tx: [-2.54354880e-12  2.32000000e-01  1.02127179e-02  7.32783269e-02\n",
+      "  6.36323685e-03  1.87212671e-02  1.51840714e-03  5.95344007e-03\n",
+      "  1.16318309e-03  1.16318309e-03]\n",
+      "z_deg: [0.31425651 0.31425651 0.05789184 0.17410816 0.02122388 0.05205445\n",
+      " 0.00694461 0.01177666 0.00385549 0.00209795]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ub, lb = gene_expression_LP_optim(params=[\"v\", \"v\", \"v\", 1], N=8, intervals=intervals_optim)"
    ]
   }
  ],
