Implemented fast approx sampling and bootstrap for marginals.

--- a/gene_expression.ipynb
+++ b/gene_expression.ipynb
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,28 +1767,35 @@
    "source": [
     "# Gene Expression\n",
     "\n",
-    "Following the exploratory work done above we produce updated code, implementing the optimizated bootstrap and combining the different LP constraint forms into one function with argument options."
+    "Following the exploratory work done above we produce updated code, implementing faster sampling, optimizated bootstrap and combining the different LP constraint forms into one function with options as arguments."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time"
+    "import math, random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import cvxpy as cv\n",
+    "import time\n",
+    "import scipy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sample Path Simulation\n"
+    "## Sample Path Simulation\n",
+    "\n",
+    "Optimize sample path simulation: instead of running n chains up to t_max and taking a single sample each, we now run a single chain up to t_max and then take samples at t_s << t_max intervals. This massively increases efficiency as we do not have a run long burn-in for each sample, but t_s must be large enough to avoid high dependence of samples. (the old method can be considered t_max = t_s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1856,17 +1863,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_path_approximate(initial_state, params, n, tmax, ts, plot=False):\n",
+    "    \"\"\"\n",
+    "    Simulate a single sample path of gene expression\n",
+    "    Sample values at intervals ts after a burn-in time of tmax to give n values\n",
+    "\n",
+    "    initial state\n",
+    "    params = [k_on, k_off, k_tx, k_deg]\n",
+    "    n = total number of samples\n",
+    "    tmax = burn-in simulation time\n",
+    "    ts = time between successive samples\n",
+    "\n",
+    "    return samples of m\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # parameters\n",
+    "    k_on = params[0]\n",
+    "    k_off = params[1]\n",
+    "    k_tx = params[2]\n",
+    "    k_deg = params[3]\n",
+    "\n",
+    "    # initialise time and state (also store jump times)\n",
+    "    t = 0\n",
+    "    path = [(initial_state[0], initial_state[1])]\n",
+    "    jump_times = [0]\n",
+    "\n",
+    "    # simulate for: burn-in time + (n-1) times between n samples\n",
+    "    while t < tmax + (n - 1) * ts:\n",
+    "\n",
+    "        # simulate holding time of current state (m,g)\n",
+    "        m, g = path[-1][0], path[-1][1]\n",
+    "\n",
+    "        # define rates\n",
+    "        # q(x,x+(0,1)): gene turns on if off\n",
+    "        q_on = (1 - g) * k_on\n",
+    "        # q(x,x+(0,-1)): gene turns off if on\n",
+    "        q_off = g * k_off\n",
+    "        # q(x,x+(1,0)): transcription if gene on\n",
+    "        q_tx = g * k_tx\n",
+    "        # q(x,x+(-1,0)): degradation if  there are molecules\n",
+    "        q_deg = m * k_deg\n",
+    "        # -q(x,x): holding rate = sum q(x,y) over y\n",
+    "        q_hold = q_on + q_off + q_tx + q_deg\n",
+    "\n",
+    "        # exponential holding time of state\n",
+    "        t_hold = -math.log(random.random()) / q_hold\n",
+    "        t += t_hold\n",
+    "        jump_times.append(t)\n",
+    "\n",
+    "        # jump probability\n",
+    "        # P(x -> y) = q_xy / q_hold\n",
+    "        outcome = [1,2,3,4]\n",
+    "        prob = [q_on / q_hold, q_off / q_hold, q_tx / q_hold, q_deg / q_hold]\n",
+    "        jump = np.random.choice(outcome,p=prob)\n",
+    "        # jump to new state\n",
+    "        if jump == 1:\n",
+    "            path.append((m,g + 1))\n",
+    "        elif jump == 2:\n",
+    "            path.append((m,g - 1))\n",
+    "        elif jump == 3:\n",
+    "            path.append((m + 1,g))\n",
+    "        elif jump == 4:\n",
+    "            path.append((m - 1,g))\n",
+    "\n",
+    "    # take the m marginal states\n",
+    "    m_path = [state[0] for state in path]\n",
+    "\n",
+    "    # create step function of sample path from jump times and jump values\n",
+    "    path_function = scipy.interpolate.interp1d(jump_times, m_path, kind='previous')\n",
+    "    \n",
+    "    # take values at sampling times as samples\n",
+    "    sample_times = [tmax + i * ts for i in range(n)]\n",
+    "    samples = path_function(sample_times)\n",
+    "    samples = [int(x) for x in samples]\n",
+    "\n",
+    "    # plot sample path with burn-in and sampled values\n",
+    "    if plot:\n",
+    "        x = np.linspace(0, tmax + (n - 1) * ts, 10000)\n",
+    "        plt.plot(x, path_function(x), label=\"Sample path\")\n",
+    "        plt.axvline(tmax, label=\"Burn-in time: t_max\", color=\"orange\")\n",
+    "        plt.scatter(sample_times, path_function(sample_times), color=\"red\", label=\"Samples\")\n",
+    "        plt.legend()\n",
+    "        plt.show()\n",
+    "\n",
+    "    return samples"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Bootstrap\n",
     "\n",
-    "Using the new vectorized method allows for a significant optimization in confidence interval computation time. However, we are still slowed down by inefficient simulation of n individual sample paths (one full burn-in path for each sampled value).\n"
+    "Using the new vectorized method allows for a significant optimization in confidence interval computation time. However, we are still slowed down by inefficient simulation of n individual sample paths (one full burn-in path for each sampled value).\n",
+    "\n",
+    "So can use new optimized approx sampling to speed up.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,23 +2096,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap_approx(initial_state, params, n, N, tmax=100, ts=10, plot=False, printing=False):\n",
+    "    \"\"\"\n",
+    "    Simulate sample paths of reaction system, bootstrap to produce confidence\n",
+    "    intervals on the m marginals of the stationary distributin.\n",
+    "\n",
+    "    Arguments:\n",
+    "    initial_state: start of each simulated sample path (m, g)\n",
+    "    params: parameters of chain for simulation [k_on, k_off, k_tx, k_deg]\n",
+    "    n: number of simulated sample paths\n",
+    "    N: number of bootstrap samples\n",
+    "    tmax: burn-in time of sample path\n",
+    "    ts: time between each sample\n",
+    "    plot: plot the computed bounds\n",
+    "    print: print the computed bounds\n",
+    "\n",
+    "    Returns:\n",
+    "    intervals: list of confidence intervals for m marginals p(0), ..., p(M - 1)\n",
+    "        of the stationary distribution of the chain\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # simulate n stationary samples (of m marginal)\n",
+    "    m_sample = sample_path_approximate(initial_state, params, n, tmax, ts, plot=plot)\n",
+    "\n",
+    "    # find the largest state (+ 1)\n",
+    "    M = np.max(m_sample) + 1\n",
+    "\n",
+    "    # N boostrap samples as N x n array\n",
+    "    bootstrap = np.random.choice(m_sample, size=(N, n))\n",
+    "    # produce N x M array of counts of states:\n",
+    "    # offset each row by multiple of M for efficient bincount\n",
+    "    bootstrap_offs = bootstrap + np.arange(N)[:,None]*M\n",
+    "    counts = np.bincount(bootstrap_offs.ravel(), minlength=N * M).reshape(-1, M)\n",
+    "    # dividing by n gives columns of estimates\n",
+    "    # take 2.5%, 97.5% percentiles of each column (i.e each p(x))\n",
+    "    quantiles = np.quantile(counts / n, [0.025, 0.975], axis=0)\n",
+    "    # form intervals: list of [2.5%, 97.5%] values for each p(x)\n",
+    "    intervals = [quantiles[:,i] for i in range(M)]\n",
+    "\n",
+    "    # plot histograms and CI\n",
+    "    for x in range(M):\n",
+    "        if printing:\n",
+    "            print(f\"95% CI for m marginal p({x}) is: ({intervals[x][0]}, {intervals[x][1]})\")\n",
+    "        if plot:\n",
+    "            plt.hist(counts[:, x] / n)\n",
+    "            plt.title(f\"Hist of m marginal p({x})\")\n",
+    "            plt.axvline(intervals[x][0], color=\"red\")\n",
+    "            plt.axvline(intervals[x][1], color=\"red\")\n",
+    "            plt.show()\n",
+    "\n",
+    "    # return CIs\n",
+    "    return intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulation time: 43.02972626686096\n",
-      "Computation time: 5.997131824493408\n",
-      "95% CI for p(0) is: (0.2786, 0.3038)\n",
-      "95% CI for p(1) is: (0.3186, 0.3448)\n",
-      "95% CI for p(2) is: (0.1946, 0.2162)\n",
-      "95% CI for p(3) is: (0.101, 0.1182)\n",
-      "95% CI for p(4) is: (0.0384, 0.05)\n",
-      "95% CI for p(5) is: (0.0104, 0.0168)\n",
-      "95% CI for p(6) is: (0.0024, 0.0058)\n",
-      "95% CI for p(7) is: (0.0, 0.0014)\n"
+      "Simulation time: 38.49851965904236\n",
+      "Computation time: 7.167936325073242\n",
+      "95% CI for p(0) is: (0.2894, 0.3148)\n",
+      "95% CI for p(1) is: (0.2988, 0.3246)\n",
+      "95% CI for p(2) is: (0.2064, 0.2292)\n",
+      "95% CI for p(3) is: (0.0964, 0.1132)\n",
+      "95% CI for p(4) is: (0.0376, 0.0488)\n",
+      "95% CI for p(5) is: (0.010995000000000001, 0.0176)\n",
+      "95% CI for p(6) is: (0.003, 0.0068)\n",
+      "95% CI for p(7) is: (0.0004, 0.0022)\n"
      ]
     }
    ],
@@ -2021,28 +2181,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulation time: 41.521308183670044\n",
-      "Computation time: 0.8115053176879883\n",
-      "95% CI for m marginal p(0) is: (0.286795, 0.3116049999999999)\n",
-      "95% CI for m marginal p(1) is: (0.3134, 0.3386)\n",
-      "95% CI for m marginal p(2) is: (0.2028, 0.2254)\n",
-      "95% CI for m marginal p(3) is: (0.0884, 0.1048)\n",
-      "95% CI for m marginal p(4) is: (0.0372, 0.0484)\n",
-      "95% CI for m marginal p(5) is: (0.014, 0.0212)\n",
-      "95% CI for m marginal p(6) is: (0.0014, 0.0044)\n",
-      "95% CI for m marginal p(7) is: (0.0004, 0.0026)\n"
+      "Simulation time: 40.93224549293518\n",
+      "Computation time: 0.8310861587524414\n",
+      "95% CI for m marginal p(0) is: (0.2894, 0.3148)\n",
+      "95% CI for m marginal p(1) is: (0.303, 0.3292)\n",
+      "95% CI for m marginal p(2) is: (0.209, 0.2326)\n",
+      "95% CI for m marginal p(3) is: (0.0932, 0.1096)\n",
+      "95% CI for m marginal p(4) is: (0.034, 0.0448)\n",
+      "95% CI for m marginal p(5) is: (0.0114, 0.018)\n",
+      "95% CI for m marginal p(6) is: (0.003, 0.0068)\n",
+      "95% CI for m marginal p(7) is: (0.0, 0.001)\n",
+      "95% CI for m marginal p(8) is: (0.0, 0.0014)\n",
+      "95% CI for m marginal p(9) is: (0.0, 0.0006)\n",
+      "95% CI for m marginal p(10) is: (0.0, 0.0006)\n"
      ]
     }
    ],
    "source": [
     "intervals_optim = bootstrap_marginal_optim((0, 0), [2, 1, 2, 1], 5000, 5000, tmax=100, plot=False, printing=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% CI for m marginal p(0) is: (0.2858, 0.3114)\n",
+      "95% CI for m marginal p(1) is: (0.311, 0.3368)\n",
+      "95% CI for m marginal p(2) is: (0.196, 0.2184)\n",
+      "95% CI for m marginal p(3) is: (0.0936, 0.1102)\n",
+      "95% CI for m marginal p(4) is: (0.0426, 0.0546)\n",
+      "95% CI for m marginal p(5) is: (0.0116, 0.0182)\n",
+      "95% CI for m marginal p(6) is: (0.0026, 0.006)\n",
+      "95% CI for m marginal p(7) is: (0.0002, 0.002)\n"
+     ]
+    }
+   ],
+   "source": [
+    "intervals_approx = bootstrap_approx((0, 0), [2, 1, 2, 1], 5000, 5000, tmax=100, ts=10, plot=False, printing=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See \"approx\" sampling is much faster, and optimized bootstrap adds a speedup. There is a risk of dependent samples leading to poor CI's, but the better efficiency means that we can easily use a larger sample size as long as ts is reasonable."
    ]
   },
   {
@@ -2060,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2996,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3012,7 +3206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4475,7 +4669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4483,15 +4677,15 @@
      "output_type": "stream",
      "text": [
       "95% CI for p((0, 0)) is: (0.0, 0.0)\n",
-      "95% CI for p((0, 1)) is: (0.001, 0.01)\n",
+      "95% CI for p((0, 1)) is: (0.003, 0.014)\n",
       "95% CI for p((1, 0)) is: (0.0, 0.0)\n",
-      "95% CI for p((1, 1)) is: (0.032, 0.057)\n",
+      "95% CI for p((1, 1)) is: (0.018, 0.038)\n",
       "95% CI for p((2, 0)) is: (0.0, 0.0)\n",
-      "95% CI for p((2, 1)) is: (0.062, 0.094)\n",
+      "95% CI for p((2, 1)) is: (0.06, 0.091)\n",
       "95% CI for p((3, 0)) is: (0.0, 0.0)\n",
-      "95% CI for p((3, 1)) is: (0.119, 0.162)\n",
+      "95% CI for p((3, 1)) is: (0.105, 0.14402499999999996)\n",
       "95% CI for p((4, 0)) is: (0.0, 0.0)\n",
-      "95% CI for p((4, 1)) is: (0.161, 0.209)\n"
+      "95% CI for p((4, 1)) is: (0.149, 0.194)\n"
      ]
     }
    ],
@@ -4502,7 +4696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4510,9 +4704,9 @@
      "output_type": "stream",
      "text": [
       "True value of p(0, 1) is: 0.006737946999085467 , CI (0.0, 0.0) is True\n",
-      "True value of p(1, 1) is: 0.03368973499542734 , CI (0.001, 0.01) is True\n",
+      "True value of p(1, 1) is: 0.03368973499542734 , CI (0.003, 0.014) is True\n",
       "True value of p(2, 1) is: 0.08422433748856833 , CI (0.0, 0.0) is True\n",
-      "True value of p(3, 1) is: 0.14037389581428056 , CI (0.032, 0.057) is True\n",
+      "True value of p(3, 1) is: 0.14037389581428056 , CI (0.018, 0.038) is True\n",
       "True value of p(4, 1) is: 0.1754673697678507 , CI (0.0, 0.0) is True\n"
      ]
     },
@@ -4523,7 +4717,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[80], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m j \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      8\u001b[0m valid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mintervals\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m true_p[i] \u001b[38;5;129;01mand\u001b[39;00m intervals[j][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m true_p[i]:\n\u001b[0;32m     10\u001b[0m     valid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrue value of p(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, 1) is: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrue_p[i]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , CI (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintervals[i][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintervals[i][\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[12], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m j \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      8\u001b[0m valid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mintervals\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m true_p[i] \u001b[38;5;129;01mand\u001b[39;00m intervals[j][\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m true_p[i]:\n\u001b[0;32m     10\u001b[0m     valid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrue value of p(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, 1) is: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtrue_p[i]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m , CI (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintervals[i][\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mintervals[i][\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
